--- a/docs/tutorials/enzoem_2.Rmd
+++ b/docs/tutorials/enzoem_2.Rmd
@@ -40,8 +40,8 @@ En este espacio se encuentran los contenidos para el Módulo 2 - Test estadísti
 
   1. Generalidades. [Materiales](https://jabiologo.github.io/web/tutorials/enzoem_2_files/enzoem2_1.zip) y [presentaciones](https://jabiologo.github.io/web/tutorials/enzoem_2_files/modulo2_1_compressed.pdf)
   2. Principales test paramétricos y no paramétricos. [Materiales](https://jabiologo.github.io/web/tutorials/enzoem_2_files/enzoem2_2.zip)
-  3. El modelo lineal general (GLM). [Materiales]()
-  4. Diseños avanzados: GLS y GLMM. [Materiales]()
+  3. El modelo lineal general (GLM).
+  4. Diseños avanzados: GLS y GLMM.
 
 # **1. Generalidades**
 
